--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,4 +22,4 @@ test:
   image: php:${PHP_VERSION}-cli
   script:
     # Run PHPUnit tests
-    - vendor/bin/phpunit --bootstrap vendor/autoload.php tests/
+    - vendor/bin/phpunit --bootstrap vendor/autoload.php test_functions.php
